@@ -7,6 +7,7 @@ C Dungeon initialization subroutine
 	LOGICAL FUNCTION INIT()
 	IMPLICIT INTEGER (A-Z)
 	LOGICAL PROTCT
+	INTEGER*4 TIME2001
 	INTEGER DATARRY(3)
 	include 'parser.h'
 	include 'gamestat.h'
@@ -17,9 +18,10 @@ C
 C MISCELLANEOUS VARIABLES
 C
         CHARACTER VEDIT
+	INTEGER*4 PLTIME,STIME
 	COMMON /STAR/ MBASE,STRBIT
 	COMMON /VERS/ VMAJ,VMIN,VEDIT
-	COMMON /TIME/ PLTIME,SHOUR,SMIN,SSEC
+	COMMON /TIME/ PLTIME,STIME
 	include 'io.h'
 	include 'debug.h'
 	COMMON /HYPER/ HFACTR
@@ -281,15 +283,9 @@ C
 C THE INTERNAL DATA BASE IS NOW ESTABLISHED.
 C SET UP TO PLAY THE GAME.
 C
-C	Day: DATARRY(1), Month: DATARRY(2), Year: DATARRY(3).
-C1025	CALL IDATE(DATARRY)
-C	CALL INIRND(or(DATARRY(1),or(DATARRY(2),DATARRY(3))),
-C     &	or(SHOUR,or(SMIN,SSEC)))
-1025	CALL INTIME(SHOUR,SMIN,SSEC)
-C						!GET TIME AND DATE.
-C	NEW WAY TO INITIALIZE /*TAA*/
-C	CALL INIRND(SHOUR*3600+SMIN*60+SSEC)
-	CALL INIRND(XOR(XOR(SHOUR,SMIN),SSEC))
+1025	STIME=TIME2001()
+C						!GET TIMESTAMP.
+	CALL INIRND(STIME)
 C
 	WINNER=PLAYER
 	LASTIT=AOBJ(PLAYER)
