@@ -4,15 +4,13 @@ C Written by R. M. Supnik.
 C Revisions Copyright (c) 2021, Darth Spectra (Lydia Marie Williamson).
 C
 C Get total time played
- 	SUBROUTINE GTTIME(T)
+ 	INTEGER*4 FUNCTION GTTIME()
  	IMPLICIT INTEGER(A-Z)
 C
- 	COMMON /TIME/ PLTIME,SHOUR,SMIN,SSEC
+ 	INTEGER*4 PLTIME,STIME,TIME2001
+ 	COMMON /TIME/ PLTIME,STIME
 C
- 	CALL INTIME(H,M,S)
- 	T=((H*60)+M)-((SHOUR*60)+SMIN)
- 	IF(T.LT.0) T=T+1440
- 	T=T+PLTIME
+ 	GTTIME=TIME2001()-STIME+PLTIME
  	RETURN
  	END
 C
