@@ -6,6 +6,7 @@ C
 C Save game state
 	SUBROUTINE SAVEGM
 	IMPLICIT INTEGER (A-Z)
+	INTEGER*4 GTTIME
 	include 'parser.h'
 	include 'gamestat.h'
 	include 'state.h'
@@ -21,9 +22,9 @@ C Save game state
 C
 C MISCELLANEOUS VARIABLES
 C
-        CHARACTER VEDIT
+	CHARACTER VEDIT
+	INTEGER*4 PLTIME
 	COMMON /VERS/ VMAJ,VMIN,VEDIT
-	COMMON /TIME/ PLTIME,SHOUR,SMIN,SSEC
 C
 	PRSWON=.FALSE.
 C						!DISABLE GAME.
@@ -32,12 +33,12 @@ C
 	OPEN (UNIT=1,file='dsave.dat',ACCESS='SEQUENTIAL',
      &	status='UNKNOWN',FORM='UNFORMATTED',ERR=100)
 C
-	CALL GTTIME(TIMEPL)
+	PLTIME=GTTIME()
 C						!GET TIME.
 	WRITE(1) VMAJ,VMIN,VEDIT
 	WRITE(1) WINNER,HERE,THFPOS,TELFLG,THFFLG,THFACT,
      &	SWDACT,SWDSTA,CPVEC
-	WRITE(1) TIMEPL,MOVES,DEATHS,RWSCOR,EGSCOR,MXLOAD,
+	WRITE(1) PLTIME,MOVES,DEATHS,RWSCOR,EGSCOR,MXLOAD,
      &	LTSHFT,BLOC,MUNGRM,HS,FROMDR,SCOLRM,SCOLAC
 	WRITE(1) ODESC1,ODESC2,OFLAG1,OFLAG2,OFVAL,OTVAL,
      &	OSIZE,OCAPAC,OROOM,OADV,OCAN
@@ -72,9 +73,10 @@ C Restore game state
 C
 C MISCELLANEOUS VARIABLES
 C
-        CHARACTER EDITV,VEDIT
+	CHARACTER EDITV,VEDIT
+	INTEGER*4 PLTIME,STIME
 	COMMON /VERS/ VMAJ,VMIN,VEDIT
-	COMMON /TIME/ PLTIME,SHOUR,SMIN,SSEC
+	COMMON /TIME/ PLTIME,STIME
 C
 	PRSWON=.FALSE.
 C						!DISABLE GAME.
