@@ -17,6 +17,7 @@ C	of object actions
 	CHARACTER P1(6),P2(6),CH(6)
 	INTEGER ANSWER(14)
 	INTEGER ANSWERN(14)
+	INTEGER*4 GTTIME,PLAYTIME
 	include 'parser.h'
 	include 'gamestat.h'
 	include 'state.h'
@@ -408,26 +409,28 @@ C						!ASSUME TOOL.
 C
 C V90--	TIME.  PRINT OUT DURATION OF GAME.
 C
-21000	CALL GTTIME(K)
+21000	PLAYTIME=GTTIME()
 C						!GET PLAY TIME.
-	I=K/60
-	J=MOD(K,60)
+	I=PLAYTIME/3600
+	J=MOD(PLAYTIME,3600)/60
+	K=MOD(PLAYTIME,60)
 C
 	WRITE(OUTCH,21010)
-	IF(I.NE.0) WRITE(OUTCH,21011) I
-	IF(I.GE.2) WRITE(OUTCH,21012)
-	IF(I.EQ.1) WRITE(OUTCH,21013)
-	IF(J.EQ.1) WRITE(OUTCH,21014) J
-	IF(J.NE.1) WRITE(OUTCH,21015) J
+	IF(I.GE.100)THEN
+	   WRITE(OUTCH,21011)
+	ELSE
+	   WRITE(OUTCH,21012) I
+	   WRITE(OUTCH,21013) J
+	   WRITE(OUTCH,21014) K
+	ENDIF
 	TELFLG=.TRUE.
 	RETURN
 C
 21010	FORMAT('You have been playing Dungeon for ',$)
-21011	FORMAT('+',I3,' hour',$)
-21012	FORMAT('+s and ',$)
-21013	FORMAT('+ and ',$)
-21014	FORMAT('+',I2,' minute.')
-21015	FORMAT('+',I2,' minutes.')
+21011	FORMAT('over 100 hours.')
+21012	FORMAT(I2,' hour(s), ',$)
+21013	FORMAT(I2,' minute(s), and '$)
+21014	FORMAT(I2,' second(s).')
 C
 C V91--	LEAP.  USUALLY A JOKE, WITH A CATCH.
 C
